# wasmedge-ffmpeg

./: .gitignore  CMakeLists.txt  README.md  build_local.sh
.github/workflows/: bindings-java.yml  build_for_nix.yml  docker.yml  reusable-build-on-windows.yml  test-python-install-script.yml
plugins/: CMakeLists.txt
plugins/wasmedge_ffmpeg/: CMakeLists.txt  ffmpeg_base.h  ffmpeg_env.cpp  ffmpeg_env.h  ffmpeg_func.cpp  ffmpeg_func.h  ffmpeg_module.cpp  ffmpeg_module.h
